[package]
name = "sync_rw_cell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/sync_rw_cell"
readme = "README.md"
description = """
Thread-safe version of RefCell.
"""

[dependencies]
mutability_marker = { version = "0.1.1", default-features = false }